tests/invalid/Unsafe_Invalid_9.whiley
unsafe function f(int x) -> (int r):
    return x

int x = f(1)